qa/kubernetes/apps/fhir-feature-test3/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fhir-feature-test3
spec:
  rules:
    - host: fhir-feature-test3.local
      http:
        paths:
        - path: /
          backend:
            serviceName: fhir-feature-test3
            servicePort: 8080
